# MoleculeStructureElucidation

./: .gitignore  extract_carbon_envs.py  pyproject.toml
nmrsolver/: __init__.py  config.py  data.py  models.py  optuna_workers.py  predict.py  retrieval.py  scoring.py  train.py
